--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/JoinPrivateLeagueModal.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/JoinPrivateLeagueModal.razor
@@ -61,7 +61,7 @@
 
         if (success)
         {
-            await DashboardState.InitializeAsync();
+            await DashboardState.LoadMyLeaguesAsync();
             await Close();
         }
         else
