--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -3,6 +3,7 @@
 @import url('badges.css');
 @import url('buttons.css');
 @import url('cards.css');
+@import url('carousel.css');
 @import url('colours.css');
 @import url('dashboard.css');
 @import url('forms.css');
