--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -35,6 +35,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 }
 
+.centre{
+    text-align: center;
+}
+
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
